--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-A-Sketch</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
 
 </head>
 <body>
     
+
+<script src="script.js"></script>
 </body>
 </html>
