--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
-    
+    <button id="btn-prompter">Click here to set canvas size</button>
+    <div id="container">
+    </div>
 
 <script src="script.js"></script>
 </body>
