Added and programmed reset button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 
 </head>
 <body>
-    <button id="btn-prompter">Click here to set canvas size</button>
-    <div id="container">
+    <!-- <button id="btn">Click here to set canvas size</button> -->
+    <!-- <input type="range" min="16" value="16" max="100" class="slider"> -->
+    <!-- <p class="slider-value-p"></p> -->
+     <div id="master-container">            
+        <div id="eas-content"></div>
+        <div class="btn-tray">
+            <button class="g-reset">Reset</button>
+        </div>
+
     </div>
 
 <script src="script.js"></script>
