--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 
 </head>
 <body>
-    <!-- <button id="btn">Click here to set canvas size</button> -->
-    <!-- <input type="range" min="16" value="16" max="100" class="slider"> -->
-    <!-- <p class="slider-value-p"></p> -->
-     <div id="master-container">            
-        <div id="eas-content"></div>
+    <div id="master-container">         
+        <div id="eas-content"></div>     
+        <input type="number" min="16" value="16" max="100" id="g-input-num">
+        <input type="range" min="16" value="16" max="100" id="g-input-range">
+        <p class="range-input-p"></p>
         <div class="btn-tray">
             <button class="g-reset">Reset</button>
         </div>
-
     </div>
 
 <script src="script.js"></script>
