--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 
 </head>
 <body>
-    <div id="master-container">         
-        <div id="eas-content"></div>     
-        <input type="number" min="16" value="16" max="100" id="g-input-num">
+    <div class="range-container">
         <input type="range" min="16" value="16" max="100" id="g-input-range">
-        <p class="range-input-p"></p>
+        <p class="show-grid-val">16</p>        
+    </div>
+    <div id="master-container">
+        <div id="eas-content"></div>
         <div class="btn-tray">
-            <button class="g-reset">Reset</button>
+            <button class="g-reset">Reset</button>               
+
         </div>
     </div>
-
 <script src="script.js"></script>
 </body>
 </html>
