created and styled two new elements within button tray, one color input and button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div id="eas-content"></div>
         <div class="btn-tray">
             <button class="g-reset">Reset</button>               
-
+            <input type="color" class="color-input">
+            <button class="btn-rdo-color">Random Color</button>
         </div>
     </div>
 <script src="script.js"></script>
