changed class name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="btn-tray">
             <button class="g-reset">Reset</button>               
             <input type="color" class="color-input">
-            <button class="btn-rdo-color">Random Color</button>
+            <button class="btn-rng-color">Random Color</button>
         </div>
     </div>
 <script src="script.js"></script>
