default para text changed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div class="btn-tray">
             <button class="g-reset">Reset</button>               
             <input type="color" class="color-input">
-            <button class="btn-rng-color">Random Color</button>
+            <div class="rng-container">
+                <button class="btn-rng-color">Random Color</button>
+                <p class="rng-color-p">Off!</p>
+            </div>
         </div>
     </div>
 <script src="script.js"></script>
